welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: type mismatch;
 found   : Int
 required: Array[Int]
    if (compteur(k, tab) != tab(k)) {
                 ^golomb:5: error: type mismatch;
 found   : Array[Int]
 required: Int
    if (compteur(k, tab) != tab(k)) {
                    ^